css/site.css
/* GitHub fork me */
#forkme { position: absolute; top: 0; right: 0; border: 0; z-index: 5000; }
#forkme img { border: none; }
#forkme-text { display: none; }

/* twitter widget */
.twtr-tweet-text a:hover, .twtr-tweet-text a:active { text-decoration: none; background-color: #333333 !important; margin: 2px; border: 1px dotted white !important; }

/* Google Search */
#searchcontrol { margin: 10px; width: 100%; text-align: left; }

/* links section */
.links { font-family:"Courier New", Courier, mono; color:#1A2233; font-size:11px; text-decoration:none; line-height: 14px; }
.links dl { margin: 0; }
.links ul { list-style: none; margin: 0 0 20px 21px; padding: 0; }
.links li { font-size: 1.1em; margin: 0; }
.links a { font-size: 1.0em; }
.links dt { font-weight: bold; }
.links dd { margin: 2px 0 0 10px; padding: 0;}
.links a:link, .links a:visited { color:#990033; margin: 3px; }
.links a:hover, .links a:active { color:#990033; text-decoration: none; background-color: white; margin: 2px; border: 1px dotted black; }

/* mini icons */
.favorite { padding-right: 12px; background: url(../images/heart.gif) no-repeat center right; }
.gold { padding-right: 14px; background: url(../images/gold.gif) no-repeat center right; }
.silver { padding-right: 14px; background: url(../images/silver.gif) no-repeat center right; }
.bronze { padding-right: 14px; background: url(../images/bronze.gif) no-repeat center right; }
.email { padding-right: 18px; background: url(../images/mail.gif) no-repeat center right; }

/* Recent Activity */
.post_summery {
    border-top: solid thin black;
    padding: 5px 0;
}

/* Headers */
h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
    color: #7DA5E0;
}

/* Easter Egg ski game */
/* Z-index of #mask must lower than #boxes .window */  
#mask {  
  position:absolute;  
  z-index:9000;  
  background-color:#000;  
  display:none;  
}  
    
#dialog-boxes .window {  
  position:absolute;  
  width:660px;  
  height:400px;  
  overflow: scroll;
  display:none;  
  z-index:9999;  
  padding:20px;  
  text-align: left;
}  

